--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-
   "name": "hairday",
-  "description": "Web application for managing haircut appointments"
-
+  "description": "Web application for managing haircut appointments",
+  "author": "Renan Santos",
   "scripts": {
     "server": "json-server --watch server.json --port 3333"
   },
-
   "dependencies": {
     "json-server": "^1.0.0-alpha.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
